@@ -29,3 +29,9 @@ acl=PRIVATE
 # required (eg. when files are gzipped or encrypted during synchronization).
 # When commented out, no batching takes place.  
 #upload.transformed-files-batch-size=1000
+
+# Custom metadata to apply when uploading new files to S3. Use the prefix "upload.metadata."
+# followed by the metadata item name, an equals sign, and the metadata value. For example:
+#upload.metadata.Cache-Control=max-age=300
+#upload.metadata.Expires=Thu, 01 Dec 1994 16:00:00 GMT
+#upload.metadata.my-metadata-item=This is the value for my metadata item 
